# MCVR

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  LICENSE.md  README.md  WindowsTraps.txt
src/: CMakeLists.txt
src/common/: mapping.hpp  shared.hpp  singleton.hpp
src/core/: CMakeLists.txt  all_extern.hpp  glfw_bind.cpp
src/core/middleware/: com_radiance_client_option_Options.cpp  com_radiance_client_pipeline_Pipeline.cpp  com_radiance_client_proxy_vulkan_BufferProxy.cpp  com_radiance_client_proxy_vulkan_DrawCommandProxy_Overlay.cpp  com_radiance_client_proxy_vulkan_PipelineStateProxy_ClearState.cpp  com_radiance_client_proxy_vulkan_PipelineStateProxy_ColorBlendState.cpp  com_radiance_client_proxy_vulkan_PipelineStateProxy_DepthStencilState.cpp  com_radiance_client_proxy_vulkan_PipelineStateProxy_RasterizationState.cpp  com_radiance_client_proxy_vulkan_PipelineStateProxy_ViewportState.cpp  com_radiance_client_proxy_vulkan_RendererProxy.cpp  com_radiance_client_proxy_vulkan_TextureProxy.cpp  com_radiance_client_proxy_vulkan_WindowProxy.cpp  com_radiance_client_proxy_world_ChunkProxy.cpp  com_radiance_client_proxy_world_EntityProxy.cpp  com_radiance_client_proxy_world_PlayerProxy.cpp
src/core/render/: buffers.cpp  buffers.hpp  chunks.cpp  chunks.hpp  entities.cpp  entities.hpp  hdr_composite_pass.cpp  hdr_composite_pass.hpp  lights.hpp  pipeline.cpp  pipeline.hpp  render_framework.cpp  render_framework.hpp  renderer.cpp  renderer.hpp  streamline_context.cpp  streamline_context.hpp  textures.cpp  textures.hpp  vertex_formats.cpp  world.cpp  world.hpp
src/core/render/modules/: ui_module.cpp  ui_module.hpp
src/core/render/modules/world/: world_module.cpp  world_module.hpp
src/core/render/modules/world/bloom/: bloom_module.cpp  bloom_module.hpp
src/core/render/modules/world/dlss/: dlss_module.cpp  dlss_module.hpp  dlss_wrapper.cpp  dlss_wrapper.hpp
src/core/render/modules/world/dof/: dof_module.cpp  dof_module.hpp
src/core/render/modules/world/fsr_upscaler/: fsr3_upscaler.cpp  fsr3_upscaler.hpp  fsr_setup.cpp  fsr_setup.hpp  upscaler_module.cpp  upscaler_module.hpp
src/core/render/modules/world/motion_blur/: motion_blur_module.cpp  motion_blur_module.hpp
src/core/render/modules/world/nrd/: nrd_module.cpp  nrd_module.hpp  nrd_wrapper.cpp  nrd_wrapper.hpp
src/core/render/modules/world/post_render/: post_render_module.cpp  post_render_module.hpp
src/core/render/modules/world/ray_tracing/: ray_tracing_module.cpp  ray_tracing_module.hpp
src/core/render/modules/world/svgf/: blue_noise.cpp  blue_noise.hpp  svgf_denoiser.cpp  svgf_denoiser.hpp  svgf_module.cpp  svgf_module.hpp
src/core/render/modules/world/template/: template_module.hpp
src/core/vulkan/: all_core_vulkan.hpp  as.cpp  as.hpp  buffer.cpp  buffer.hpp  command.cpp  command.hpp  descriptor.cpp  descriptor.hpp  device.cpp  device.hpp  dynamic_pipeline.cpp  dynamic_pipeline.hpp  framebuffer.cpp  framebuffer.hpp  framework.cpp  framework.hpp  image.cpp  image.hpp  instance.cpp  instance.hpp  physical_device.cpp  physical_device.hpp  pipeline.cpp  pipeline.hpp  render_pass.cpp  render_pass.hpp  sbt.cpp  sbt.hpp  shader.cpp  shader.hpp  swapchain.cpp  swapchain.hpp  sync.cpp  sync.hpp  vertex.cpp  vertex.hpp  vma.cpp  vma.hpp  window.cpp  (+1 more)
src/shader/: CMakeLists.txt  full_screen.vert  hdr_ui_composite.frag  rgb_bgr_fix.frag  sdr_ui_composite.frag
src/shader/overlay/core/: position.frag  position.vert  position_color.frag  position_color.vert  position_color_tex_light.frag  position_color_tex_light.vert  position_color_tex_overlay_light_normal_entity_cull.frag  position_color_tex_overlay_light_normal_entity_no_outline.frag  position_color_tex_overlay_light_normal_entity_no_outline.vert  position_end_portal.frag  position_end_portal.vert  position_tex_color.frag  position_tex_color.vert  position_tex_glint.frag  position_tex_glint.vert
src/shader/overlay/post/: blur.frag  blur.vert
src/shader/util/: area_light.glsl  blue_noise.glsl  clouds.glsl  disney.glsl  labpbr.glsl  random.glsl  ray_cone.glsl  ray_offset.glsl  ray_payloads.glsl  restir.glsl  sampling_helpers.glsl  util.glsl
src/shader/world/nrd/: nrd_compose.comp  nrd_prepare.comp  taa.comp
src/shader/world/post_render/: bloom.comp  cas.comp  color_to_depth.frag  color_to_depth.vert  dof.comp  lanczos_downscale.comp  light_map.frag  motion_blur.comp  world_post.frag  world_post.vert  world_post_star.frag  world_post_star.vert
src/shader/world/ray_tracing/: boat_water_mask.rahit  boat_water_mask.rchit  end_gateway.rchit  end_portal.rahit  end_portal.rchit  hand.rmiss  light_clustering.comp  point_light_shadow.rmiss  restir_spatial.comp  shadow.rahit  shadow.rchit  shadow.rmiss  world.rgen  world.rmiss  world_cloud.rahit  world_cloud.rchit  world_no_reflect.rchit  world_solid_transparent.rchit  world_transparent.rahit
src/shader/world/ray_tracing/atmosphere/: skycube.frag  trans_lut.frag
src/shader/world/svgf/: direct_atrous_step1.comp  direct_atrous_step16.comp  direct_atrous_step2.comp  direct_atrous_step4.comp  direct_atrous_step8.comp  direct_filter_moments.comp  direct_gaussian_h.comp  direct_gaussian_v.comp  direct_moments.comp  direct_reproject.comp  direct_spatial.comp  direct_temporal_clamp.comp  extract_roughness.comp  gi_atrous_step1.comp  gi_atrous_step16.comp  gi_atrous_step2.comp  gi_atrous_step4.comp  gi_atrous_step8.comp  gi_combine.comp  gi_copy_albedo.comp  gi_filter_moments.comp  gi_modulate.comp  gi_moments.comp  gi_prepare.comp  gi_reproject.comp  gi_temporal.comp  gi_variance.comp  shadow_atrous_step1.comp  shadow_atrous_step16.comp  shadow_atrous_step2.comp  shadow_atrous_step4.comp  shadow_atrous_step8.comp  shadow_edge_blur.comp  shadow_edge_refine.comp  shadow_gaussian_h.comp  shadow_gaussian_v.comp  shadow_temporal_clamp.comp  spec_atrous_step1.comp  spec_atrous_step16.comp  spec_atrous_step2.comp  (+4 more)
src/shader/world/temporal_accumulation/: tmp_acc.frag
src/shader/world/tone_mapping/: exposure.comp  hist.comp  tone_mapping.frag  tone_mapping.vert
src/shader/world/upscaler/: linear_to_device_depth.comp
(+9 files in other folders)
